DesignProject/tests/pass/test03_pass.src
func factorial(n : int) -> int {
    local result : int;
    local i : int;
    result := 1;
    i := 1;
    while (i <= n) {
        result := result * i;
        i := i + 1;
    }
    return(result);
}

