DesignProject/tests/error/test03_error.src
func add(a : int, b : int) -> int {
    local a : int;
    local result : int;
    result := a + b;
    return(result);
}

